--- a/bounce.html
+++ b/bounce.html
@@ -64,8 +64,8 @@ window.addEventListener("devicemotion", (e) => {
     if (!e.accelerationIncludingGravity) return;
 
     const acc = e.accelerationIncludingGravity;
-    gyroX = acc.x;
-    gyroY = acc.y;
+    gyroX = acc.y;
+    gyroY = acc.x;
 });
 
 // iOS requires permission
