--- a/bounce.html
+++ b/bounce.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Canvas Physics Ball</title>
+<title>Canvas Physics Ball with Realistic Motion</title>
 <style>
   body, html {
     margin: 0;
     padding: 0;
     overflow: hidden;
     background: #000000;
+    color: white;
+    font-family: Arial, sans-serif;
   }
   #enable-motion {
     position: fixed;
@@ -16,20 +18,41 @@
     left: 20px;
     padding: 10px 20px;
     background: white;
+    color: black;
     border-radius: 8px;
     z-index: 2;
+  }
+  #sensitivity-wrapper {
+    position: fixed;
+    top: 70px;
+    left: 20px;
+    z-index: 2;
+    background: rgba(255,255,255,0.1);
+    padding: 12px;
+    border-radius: 8px;
+    backdrop-filter: blur(4px);
+  }
+  #sensitivity {
+    width: 160px;
   }
 </style>
 </head>
 <body>
 
 <button id="enable-motion">Enable Motion</button>
+
+<div id="sensitivity-wrapper">
+  <div>Sensitivity: <span id="sens-value">1.0</span>x</div>
+  <input type="range" id="sensitivity" min="0.1" max="3" step="0.1" value="1.0">
+</div>
+
 <canvas id="canvas"></canvas>
 
 <script>
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
 
+// Resize canvas
 function resize() {
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
@@ -40,109 +63,99 @@ window.onresize = resize;
 // === BALL PHYSICS STATE ===
 let x = 200;
 let y = 50;
-let vx = 2;
+let vx = 0;
 let vy = 0;
 
 const radius = 25;
 
 // Physics constants
-const gravity = 0.35;
-const quadraticDrag = 0.002;
-const groundFriction = 0.008;
+const mass = 1;
+const gravity = 0.5;
+const damping = 0.8;
+const friction = 0.98;
 
-// Angle-based elasticity tuning
-const baseElasticity = 0.55;   // weakest bounce
-const elasticityBoost = 0.25;  // more bounce for steep angle impact
+// Device acceleration
+let ax = 0;
+let ay = 0;
 
-// Gyro inputs
-let gyroX = 0;
-let gyroY = 0;
-const gyroForce = 0.4;
+// Gyro sensitivity (dynamically adjustable)
+let gyroForce = 1.0;
 
-// === Device Motion Handling (Gyro) ===
-window.addEventListener("devicemotion", (e) => {
-    if (!e.accelerationIncludingGravity) return;
+// Slider control
+const slider = document.getElementById("sensitivity");
+const sensValue = document.getElementById("sens-value");
 
-    const acc = e.accelerationIncludingGravity;
-    gyroX = -acc.x;
-    gyroY = -acc.y;
-});
-
-// iOS requires permission
-document.getElementById("enable-motion").onclick = async () => {
-    if (typeof DeviceMotionEvent != "undefined" && typeof DeviceMotionEvent.requestPermission === "function") {
-        const response = await DeviceMotionEvent.requestPermission();
-        if (response === "granted") {
-            alert("Motion Enabled!");
-        }
-    } else {
-        alert("Motion access not required on this device.");
-    }
+slider.oninput = () => {
+    gyroForce = parseFloat(slider.value);
+    sensValue.textContent = gyroForce.toFixed(1);
 };
 
-// === MAIN PHYSICS LOOP ===
+// iOS DeviceMotion permission
+document.getElementById("enable-motion").onclick = async () => {
+    if (typeof DeviceMotionEvent !== "undefined" &&
+        typeof DeviceMotionEvent.requestPermission === "function") {
+
+        const response = await DeviceMotionEvent.requestPermission();
+        if (response === "granted") startMotion();
+
+    } else {
+        startMotion();
+    }
+    document.getElementById("enable-motion").style.display = "none";
+};
+
+// DeviceMotion event
+function startMotion() {
+    window.addEventListener("devicemotion", (e) => {
+        if (!e.accelerationIncludingGravity) return;
+        const acc = e.accelerationIncludingGravity;
+
+        // Apply dynamic sensitivity
+        ax = -acc.x * gyroForce / mass;
+        ay = -acc.y * gyroForce / mass + gravity;
+    });
+}
+
+// MAIN PHYSICS LOOP
 function loop() {
     const w = canvas.width;
     const h = canvas.height;
 
-    // APPLY GRAVITY
-    vy += gravity;
+    // Apply acceleration
+    vx += ax;
+    vy += ay;
 
-    // APPLY GYRO FORCES
-    vx += gyroX * gyroForce;
-    vy -= gyroY * gyroForce;
-
-    // QUADRATIC DRAG for natural slowing
-    vx -= quadraticDrag * vx * Math.abs(vx);
-    vy -= quadraticDrag * vy * Math.abs(vy);
+    // Apply friction
+    vx *= friction;
+    vy *= friction;
 
     // Update position
     x += vx;
     y += vy;
 
-    // === COLLISION DETECTION ===
-    const bottom = h - radius;
-    const right = w - radius;
-
-    // -------- FLOOR COLLISION (WITH ANGLE-BASED ELASTICITY) --------
-    if (y > bottom) {
-        y = bottom;
-
-        // Determine impact angle (steep vs shallow)
-        const angle = Math.atan2(vy, vx);
-
-        // More vertical impact → stronger bounce
-        const angleFactor = Math.abs(Math.sin(angle));
-
-        const effectiveElasticity =
-            baseElasticity + angleFactor * elasticityBoost;
-
-        vy = -vy * effectiveElasticity;
-
-        // Rolling friction
-        vx *= (1 - groundFriction);
-    }
-
-    // -------- CEILING --------
-    if (y < radius) {
-        y = radius;
-        vy = -vy * 0.5;
-    }
-
-    // -------- WALLS --------
-    if (x > right) {
-        x = right;
-        vx = -vx * 0.7;
-    }
+    // Collisions
     if (x < radius) {
         x = radius;
-        vx = -vx * 0.7;
+        vx = -vx * damping;
+    }
+    if (x > w - radius) {
+        x = w - radius;
+        vx = -vx * damping;
     }
 
-    // === RENDERING ===
+    if (y < radius) {
+        y = radius;
+        vy = -vy * damping;
+    }
+    if (y > h - radius) {
+        y = h - radius;
+        vy = -vy * damping;
+        vx *= 0.95; // Rolling friction
+    }
+
+    // Draw
     ctx.clearRect(0, 0, w, h);
 
-    // BALL
     ctx.beginPath();
     ctx.arc(x, y, radius, 0, Math.PI * 2);
     ctx.fillStyle = "#ff4444";
@@ -154,7 +167,7 @@ function loop() {
 }
 
 loop();
-
 </script>
+
 </body>
 </html>
